--- a/eventFrontend/package.json
+++ b/eventFrontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "event-backend",
+  "name": "event-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.1",
     "tslib": "^2.3.0",
